# sdlc_genai_demo

./: LICENSE  README.md  end  gitignore  pyproject.toml  requirements.txt
data/: .gitkeep  customer_data.csv  customer_sample.csv  order_data.csv  order_sample.csv  sample_customer.csv  sample_customer_data.csv  sample_order.csv  sample_order_data.csv
documentation/: functional.txt  technical.txt
project_name/: pyproject.toml
project_name/src/: module1.py
project_name/tests/: test_module1.py
src/: __init__.py  bronze_dlt.py  bronze_layer.py  bronze_layer_ingestion.py  clean_data.py  cleanse_data.py  config.py  create_customer_aggregate.py  create_customeraggregatespend.py  create_order_summary.py  create_ordersummary.py  customer_aggregate_spend.py  data_cleaner.py  data_cleansing.py  data_ingestion.py  data_loader.py  data_loading.py  data_transformation.py  data_transformer.py  delta_pipeline.py  dlt_pipeline.py  etl_job.py  etl_pipeline.py  etl_processor.py  generate_metadata.py  gold_dlt.py  gold_layer.py  gold_layer_aggregation.py  implement_scd_type2.py  ingest_data.py  load_data.py  load_gold_data.py  load_raw_data.py  logger.py  logging_utils.py  main.py  module1.py  order_pipeline.py  order_processing.py  order_summary.py  (+20 more)
src/bronze/: load_customer_raw.py  load_orders_raw.py
src/gold/: load_customer_order_summary.py
src/silver/: load_customer_order_combined.py
src/utils/: catalog_helper.py  scd2.py
tests/: __init__.py  test_bronze.py  test_bronze_dlt.py  test_bronze_layer.py  test_bronze_layer_ingestion.py  test_customer_aggregate_spend.py  test_data_loader.py  test_data_loading.py  test_delta_pipeline.py  test_dlt_pipeline.py  test_etl_job.py  test_etl_processor.py  test_gold_dlt.py  test_main.py  test_module1.py  test_order_pipeline.py  test_order_processing.py  test_order_summary.py  test_order_summary_processor.py  test_scd_type2_loader.py  test_scd_type2_updater.py  test_silver_dlt.py  test_silver_layer.py  test_utils.py
